--- a/homeworks/03/sol/03.tex
+++ b/homeworks/03/sol/03.tex
@@ -29,6 +29,9 @@ Bei Teilaufgabe (a) möchten wir zwei Äquivalenzen zeigen.
 Zunächst einmal, dass $X_n\xrightarrow{\text{f.s.}}X$ äquivalent dazu ist, dass für alle $\varepsilon>0$ gilt, $\lim_n\bigl(\bigcup_{m=n}^\infty\{|X_m-X|>\varepsilon\}\bigr)=0$.
 Als zweites möchten wir zeigen, dass dies wieder äquivalent dazu ist, dass $\sup_{m\geq n}|X_n-X|\xrightarrow{P}0$.
 Hierfür gehen wir wie im Beweis von Satz 6.1.2 in \cite{hesse} vor.
+Die Idee ist, die Definition der fast sicheren Konvergenz in Form von Vereinigungen und schnitten zu umschreiben.
+Da $P$ ein Wahrscheinlichkeitsmaß ist, können wir den Limes, der bei der fast sicheren Konvergenz im Argument von $P$ steht, rausziehen.
+
 Gilt $X_n\xrightarrow{\text{f.s.}}X$, so heißt es nach Defintion, dass $P(\lim|X_n-X|=0)=1$, oder
 \begin{align*}
 0
@@ -37,9 +40,9 @@ Gilt $X_n\xrightarrow{\text{f.s.}}X$, so heißt es nach Defintion, dass $P(\lim|
   &=1-P(\exists n\in\mathbb{N}\,\forall m\geq n~|X_m-X|<\varepsilon)\,.
     \intertext{$\omega\in\{\exists n\in\mathbb{N}\,\forall m\geq n~|X_m-X|<\varepsilon\}$ gilt genau dann, wenn $\omega$ in irgendeiner der Mengen $\{\forall m\geq1|X_m-X|<\varepsilon\},\{\forall m\geq2|X_m-X|<\varepsilon\},\dots$ ist.
     Entsprechend gilt $\omega\in\{\forall m\geq n~|X_m-X|<\varepsilon\}$ genau dann, wenn $\omega$ in all den Mengen $\{|X_n-X|<\varepsilon\},\{|X_{n+1}-X|<\varepsilon\},\dots$ vorkommt.
-    Entsprechend lässt sich umschreiben}
+    Hierdurch lässt sich umschreiben}
   &=1-P\Bigl(\bigcup\nolimits_{n=1}^\infty\bigcap\nolimits_{m=n}^\infty\{|X_m-X|<\varepsilon\}\Bigr)\,.
-    \intertext{Dadurch, dass $\bigl(\bigcup A_i\bigr)^\mathrm{c}=\bigcap A_i^\mathrm{c}$ und $\bigl(\bigcap A_i\bigr)^\mathrm{c}=\bigcup A_i^\mathrm{c}$ folgt}
+    \intertext{Dadurch, dass $\{|X_m-X|<\varepsilon\}^\mathrm{c}=\{|X_m-X|\geq\varepsilon\}$, sowie $\bigl(\bigcup A_i\bigr)^\mathrm{c}=\bigcap A_i^\mathrm{c}$ und $\bigl(\bigcap A_i\bigr)^\mathrm{c}=\bigcup A_i^\mathrm{c}$ folgt}
   &=P\Bigl(\bigcap\nolimits_{n=1}^\infty\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\Bigr)\,.
     \intertext{Hierbei konvergiert die Folge $\bigl(\bigcup_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\bigr)_n$ von oben gegen $\bigcap\nolimits_{n=1}^\infty\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}$, sodass wir nach Satz A.14 den Limes herausziehen können und sich ergibt}
   &=\lim\nolimits_{n}P\Bigl(\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\Bigr)\,,
@@ -52,9 +55,9 @@ Also genau dann, wenn $\omega\in\{\sup_{m\geq n}|X_m-X|\geq\varepsilon\}$.
 Es folgt
     $\lim\nolimits_{n}P\bigl(\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\bigr)
   =\lim\nolimits_n P(\sup\nolimits_{m\geq n}|X_m-X|\geq\varepsilon)\,.$
-Da die Beziehung für beliebige $\varepsilon>0$ gilt, ist die gesuchte Äquivalenz mit der Definition der stochastischen Konvergenz 14.ii gezeigt.
+Da die Beziehung für beliebige $\varepsilon>0$ gilt, ist die gesuchte Äquivalenz mit der Definition der stochastischen Konvergenz 14.\emph{ii} gezeigt.
 
-Zur Teilaufgabe (b), bemerken wir, dass, wenn $(X_n)$ fast sicher gegen ein $X$ konvergiert, dann auch $|X_n-X|\wedge1$ fast sicher gegen 0 konvergiert.
+Zur Teilaufgabe (b) bemerken wir, dass, wenn $(X_n)$ fast sicher gegen ein $X$ konvergiert, dann auch $|X_n-X|\wedge1$ fast sicher gegen 0 konvergiert.
 Da $|X_n-X|\wedge1$ die 1 als integrierbare Majorante hat,  konvergiert mit Theorem 14 über majorisierte Konvergenz $E[|X_n-X|\wedge 1]$ fast sicher gegen 0 und schließlich $(X_n)$ nach Lemma 17 stochastisch gegen $X$.
 
 Als alternative Lösung gehen wie im Beweis zu Satz 6.2.2 in \cite{hesse} vor.
@@ -70,50 +73,55 @@ Das heißt für alle $\omega\in\Omega\setminus N$ sind $\bigl(X_n(\omega)\bigr)_
 Entsprechend der Argumentation mit Quantoren aus Teilaufgabe (a) heißt das, für alle $\varepsilon>0$ gilt
 \begin{align*}
   1
-  &=P\bigl(\bigcup\nolimits_{n=1}^\infty\bigcap\nolimits_{m=n}^\infty\{|X_n-X_m|<\varepsilon\}\bigr)\,.
+  &=P\bigl(\bigcup\nolimits_{n=1}^\infty\bigcap\nolimits_{m=n}^\infty\{|X_m-X_n|<\varepsilon\}\bigr)\,.
     \intertext{Mit Stetigkeit von unten folgt}
-  &=\lim\nolimits_nP\Bigl(\bigcap\nolimits_{m=n}^\infty\{|X_n-X_m|<\varepsilon\}\Bigr)\,.
+  &=\lim\nolimits_nP\Bigl(\bigcap\nolimits_{m=n}^\infty\{|X_m-X_n|<\varepsilon\}\Bigr)\,.
 \end{align*}
-Da $\bigl(\bigcap A_n\bigr)^\mathrm{c}=\bigcup A_n^\mathrm{c}$ folgt mit Verschieben $m\mapsto m-n$ schließlich die Behauptung.
+Da $\bigl(\bigcap A_n\bigr)^\mathrm{c}=\bigcup A_n^\mathrm{c}$ folgt mit Verschieben $m\mapsto m-n$ die Behauptung.
 \newpage
 \paragraph{B3A2}
-Bei Teilaufgabe (a) ist zu zeigen, dass wenn $X_n\leq Y_n\leq Z_n$ für alle $n\in\mathbb{N}$ und $X_n\xrightarrow{P}X$, $Y_n\xrightarrow{P}Y$ sowie $Z_n\xrightarrow{P}Z$, dann $X_n+Y_n\xrightarrow{P}X+Y$. Es ist also zu zeigen, dass für alle $\varepsilon>0$ gilt $P(|X_n-X+Y_n-Y|\geq\varepsilon)=0$.
+Bei Teilaufgabe (a) ist zu zeigen, dass wenn $X_n\leq Y_n\leq Z_n$ für alle $n\in\mathbb{N}$ und $X_n\xrightarrow{P}X$, $Y_n\xrightarrow{P}Y$ sowie $Z_n\xrightarrow{P}Z$, dann $X_n+Y_n\xrightarrow{P}X+Y$. Es ist also zu zeigen, für alle $\varepsilon>0$ gilt $\lim_nP(|X_n-X+Y_n-Y|\geq\varepsilon)=0$.
 Für den Beweis gehen wir entsprechend \cite{tsitsiklis} vor.
 Wir möchten uns zunächst Folgen $(a_n)$ und $(b_n)$ in den reellen Zahlen anschauen und zeigen, dass wenn $a_n\to a$ und $b_n\to b$ gilt, dann auch $a_n+b_n\to a+b$ gilt.
+Da $\bigl(P(|X_n-X|\geq\varepsilon)\bigr)_n$ und $\bigl(P(|Y_n-Y|\geq\varepsilon)\bigr)_n$ Folgen in reellen Zahlen sind, können wir die Summenregel dann auf diese anwenden.
+
 $a_n\to a$ bedeutet, dass für alle $\varepsilon>0$ ein $n_0\in\mathbb{N}$ existiert, sodass für alle $n\geq n_0$ gilt $|a_n-a|<\varepsilon$.
 Sei nun $\varepsilon>0$ beliebig vorgegeben und $n_0\in\mathbb{N}$ so, dass $|a_n-a|<\frac{\varepsilon}{2}$.
 Weiterhin sei $n_0'\in\mathbb{N}$ so, dass $|b_n-b|<\frac{\varepsilon}{2}$.
-Wenn nun $n\geq n_0\vee n_0'$ gilt nach Dreiecksungleichung $|a_n-a+b_n-b|\leq|a_n-a|+|b_n-b|<\frac{\varepsilon}{2}+\frac{\varepsilon}{2}=\varepsilon$, sodass $a_n+b_n\to a+b$.
+Wenn wir nun ein $n\geq n_0\vee n_0'$ wählen, so gilt nach Dreiecksungleichung $|a_n-a+b_n-b|\leq|a_n-a|+|b_n-b|<\frac{\varepsilon}{2}+\frac{\varepsilon}{2}=\varepsilon$, sodass $a_n+b_n\to a+b$.
 
 Nun möchten wir die entsprechende Aussage für stochastische Konvergenz zeigen.
-Sei wieder $\varepsilon>0$ beliebig.
+Das machen wir so ähnlich wie im Beweis von Lemma 16.
+Wir schätzen die Wahrscheinlichkeit, $P(|X_n-X+Y_n-Y|\geq\varepsilon)$, die im Limes verschwinden soll, nach oben hin mithilfe der Dreiecksungleichung durch die Einzelwahrscheinlichkeiten $P(|X_n-X|\geq\varepsilon)$ und $P(|Y_n-Y|\geq\varepsilon)$ ab, von denen wir wissen, dass sie im Limes verschwinden.
+
+Sei hierfür wieder $\varepsilon>0$ beliebig.
 In Analogie zur Konvergenz der reellen Folgen $(a_n)$ und $(b_n)$ gilt mit der Dreiecksungleichung und der Monotonie von $P$, dass
 \begin{align*}
-  P(|X_n-X+Y_n-Y|\geq\varepsilon)
-  &\leq P(|X_n-X|+|Y_n-Y|\geq\varepsilon)\,.
-    \intertext{Nun ist die Wahrscheinlichkeit, dass $|X_n-X|+|Y_n-Y|\geq\varepsilon$ kleiner als die Wahrscheinlichkeit dafür, dass nur $|X_n-X|\geq\frac{\varepsilon}{2}$ oder nur $|Y_n-Y|\geq\frac{\varepsilon}{2}$.
+  P(|X_n-X+Y_n-Y|\geq2\varepsilon)
+  &\leq P(|X_n-X|+|Y_n-Y|\geq2\varepsilon)\,.
+    \intertext{Nun ist die Wahrscheinlichkeit, dass $|X_n-X|+|Y_n-Y|\geq\varepsilon$ kleiner als die Wahrscheinlichkeit dafür, dass nur $|X_n-X|\geq\varepsilon$ oder nur $|Y_n-Y|\geq\varepsilon$.
     Damit gilt}
-  &\leq P\Bigl(\Bigl\{|X_n-X|\geq\frac{\varepsilon}{2}\Bigr\}\cup\Bigl\{|Y_n-Y|\geq\frac{\varepsilon}{2}\Bigr\}\Bigr)\,.
+  &\leq P\bigl(\{|X_n-X|\geq\varepsilon\}\cup\{|Y_n-Y|\geq\varepsilon\}\bigr)\,.
     \intertext{Da $P$ subadditiv ist, können wir abschätzen}
-  &\leq P\Bigl(\Bigl\{|X_n-X|\geq\frac{\varepsilon}{2}\Bigr\}\Bigr)+P\Bigl(\Bigl\{|Y_n-Y|\geq\frac{\varepsilon}{2}\Bigr\}\Bigr)\,.
-    \intertext{Da $X_n\xrightarrow{P}X$ und $Y_n\xrightarrow{P}Y$, sind die beiden Terme in der obigen Summe Folgen in $\mathbb{R}$, die gegen 0 konvergieren.
-    Wir haben vorhin auch erklärt, dass dann die Summe der Folgen gegen 0 konvergiert.
-    Damit ist die reelle Folge $P(|X_n-X+Y_n-Y|\geq\varepsilon)$ mit etwas nach oben abgeschätzt, dass für $n\to\infty$ gegen 0 konvergiert, sodass $\lim_nP(|X_n-X+Y_n-Y|\geq\varepsilon)=0$ und $X_n+Y_n\xrightarrow{P}X+Y$.}
+  &\leq P\bigl(\{|X_n-X|\geq\varepsilon\})+P(\{|Y_n-Y|\geq\varepsilon\}\bigr)\,.
 \end{align*}
-
+Da $X_n\xrightarrow{P}X$ und $Y_n\xrightarrow{P}Y$, sind die beiden Terme in der obigen Summe Folgen in $\mathbb{R}$, die gegen 0 konvergieren.
+Wir haben vorhin auch erklärt, dass dann die Summe der Folgen gegen 0 konvergiert.
+Damit ist die reelle Folge $P(|X_n-X+Y_n-Y|\geq\varepsilon)$ mit etwas nach oben abgeschätzt, dass für $n\to\infty$ gegen 0 konvergiert, sodass $\lim_nP(|X_n-X+Y_n-Y|\geq\varepsilon)=0$ und $X_n+Y_n\xrightarrow{P}X+Y$.
+    
 Bei Teilaufgabe (b) konvergiert nun zusätzlich $E[X_n]\to E[X]$ und $E[Z_n]\to E[Z]$ und wir sollen zeigen, dass $E[Y_n]\to E[Y]$, also $Y_n\xrightarrow{\mathcal{L}^p}Y$.
 Entsprechend Tipp wollen wir Theorem 22 verwenden.
 Da laut Aufgabenstellung bereits $Y_n\xrightarrow{P}Y$ gilt, zeigen wir, dass $(Y_n)$ gleichgradig integrierbar ist.
 Dann gilt nach Theorem 22, dass $Y_n\xrightarrow{\mathcal{L}^p}Y$.
 Um die gleichgradige Integrierbarkeit von $(Y_n)$ zu zeigen, reicht es nach Lemma 20 zu zeigen, dass $E[|Y_n|]<\infty$ und dass $\lim_{\varepsilon\to0}\sup_{A:P(A)<\varepsilon}\sup_{n}E[|Y_n|\mathbbm{1}_A]=0$.
 Da $X_n\leq Y_n\leq Z_n$ ist $|Y_n|\leq|X_n|+|Z_n|$ für alle $n$.
-Wegen der Monotonie und Linearität des Erwartungswertes erhalten wir $E[|Y_n|]\leq E[|X_n|+|Z_n|]=E[|X_n|]+E[|Z_n|]<\infty$, da die Folgen $(E[X_n])$ und $(E[Z_n])$ konvergent und somit beschränkt sind.
+Wegen der Monotonie und Linearität des Erwartungswertes gilt für den Erwartungswert $E[|Y_n|]$, dass $E[|Y_n|]\leq E[|X_n|+|Z_n|]=E[|X_n|]+E[|Z_n|]<\infty$, da die Folgen $(E[X_n])$ und $(E[Z_n])$ konvergent und somit beschränkt sind.
 
-Nun ist noch zu zeigen, dass $(Y_n)$ den zweiten Part der Bedingung \emph{(ii)} von Lemma 20 erfüllt.
+Nun ist noch zu zeigen, dass $(Y_n)$ den zweiten Part der Bedingung \emph{(ii)} von Lemma 20 erfüllt, also, dass $\lim_{\varepsilon\to0}\sup_{A:P(A)<\varepsilon}\sup_{n}E[|Y_n|\mathbbm{1}_A]=0$ gilt.
 Wieder gilt wegen der Monotonie des Erwartungswertes
 \begin{align*}
   \lim_{\varepsilon\to0}\sup_{A:P(A)<\varepsilon}\sup_{n\in\mathbb{N}}E[|Y_n|\mathbbm{1}_A]
-  &\leq\lim_{\varepsilon\to0}\sup_{A:P(A)<\varepsilon}\sup_{n\in\mathbb{N}}E[|X_n|+|Z_n|\mathbbm{1}_A]\,.
+  &\leq\lim_{\varepsilon\to0}\sup_{A:P(A)<\varepsilon}\sup_{n\in\mathbb{N}}E[(|X_n|+|Z_n|)\mathbbm{1}_A]\,.
       \intertext{Wegen der Linearität des Erwartungswertes gilt}
   &=\lim_{\varepsilon\to0}\sup_{A:P(A)<\varepsilon}\sup_{n\in\mathbb{N}}E[|X_n|\mathbbm{1}_A]\\
   &\quad+\lim_{\varepsilon\to0}\sup_{A:P(A)<\varepsilon}\sup_{n\in\mathbb{N}}E[|Z_n|\mathbbm{1}_A]=0\,,
