--- a/homeworks/03/sol/03.tex
+++ b/homeworks/03/sol/03.tex
@@ -143,12 +143,12 @@ Nach der Definition der $K_n$ gilt
 Da $EK_{n+1}>EK_n$ gilt $\lim_{n\to\infty}EK_n=\infty$.
 
 Bei der Teilaufgabe (b) sollen wir zeigen, dass $K_n$ dennoch stochastisch gegen 0 konvergiert.
-Hierfür nutzen wir den Tipp und betrachten $\log K_n=\sum^n\log Y_i$ und wenden das schwache Gesetz der großen Zahlen auf die $\log Y_i$ an.
-$(\log Y_i)$ genügt dem schwachen Gesetz der großen Zahlen, wenn die $\log Y_i$ unabhängig identisch verteilt sind und ihr Erwartungswert sowie ihre Varianz endlich sind.
-Da die $Y_i$ unabhängig identisch verteilt sind, sind es die $\log Y_i$ auch.
-Wir rechnen nach, dass $E[\log Y_1]=\frac{1}{2}\log\frac{5}{3}+\frac{1}{2}\log\frac{1}{2}<0$ und $|E[\log Y_i]|<\infty$.
-$E[(\log Y_i)^2]=\frac{1}{2}\bigl(\log\frac{5}{3}\bigr)^2+\frac{1}{2}\bigl(\log\frac{1}{2}\bigr)^2<\infty$, sodass Erwartungswert und Varianz endlich sind.
-Somit genügt $(\log Y_i)_i$ dem schwachen Gesetz der großen Zahlen, sodass gilt $\frac{1}{n}\sum^n\log Y_i\xrightarrow{P}E[\log Y_1]<0$, also $\frac{\log K_n}{n}\xrightarrow{P}E[\log Y_1]<0$.
+Hierfür nutzen wir den Tipp und betrachten die Zufallsvariable $\log K_n=\sum^n_{i=1}\log Y_i$ und wenden das schwache Gesetz der großen Zahlen auf die $\log Y_i$ an.
+Die Folge $(\log Y_i)$ genügt dem schwachen Gesetz der großen Zahlen, wenn die $\log Y_i$ unabhängig identisch verteilt sind und ihr Erwartungswert sowie ihre Varianz endlich sind.
+Da die $Y_i$ unabhängig identisch verteilt sind, sind auch die $\log Y_i$ unabhängig und identisch verteilt.
+Wir rechnen nach, dass $E[\log Y_1]=\frac{1}{2}\log\frac{5}{3}+\frac{1}{2}\log\frac{1}{2}<0$ und $|E[\log Y_1]|<\infty$.
+$E[(\log Y_1)^2]=\frac{1}{2}\bigl(\log\frac{5}{3}\bigr)^2+\frac{1}{2}\bigl(\log\frac{1}{2}\bigr)^2<\infty$, sodass Erwartungswert und Varianz endlich sind.
+Somit genügt $(\log Y_i)$ dem schwachen Gesetz der großen Zahlen, sodass gilt $\frac{1}{n}\sum^n\log Y_i\xrightarrow{P}E[\log Y_1]<0$, also gilt mit der Definition von $\log K_n$ dass $\frac{\log K_n}{n}\xrightarrow{P}E[\log Y_1]<0$.
 Da für den Nenner von $\frac{\log K_n}{n}$ gilt $n\to\infty$ und $E[\log Y_1]<0$, muss gelten $\log K_n\xrightarrow{P}-\infty$, also $K_n\xrightarrow{P}\mathrm{e}^{-\infty}=0$.
 % https://math.stackexchange.com/questions/1938662/using-the-law-of-large-numbers-to-show-that-m-n-prod-k-1n-1x-k-converge
 
@@ -162,7 +162,7 @@ Wir fragen uns, ob $(X_n)$ stochastisch konvergiert, also ob für alle $\varepsi
 Wir vermuten, dass, wenn $(X_n)$ konvergiert, es gegen $X=0$ konvergiert.
 Die Frage ist also, ob für alle $\varepsilon>0$ gilt $\lim P(X_n\geq\varepsilon)=0$.
 Sei, um das zu klären, ein $\varepsilon>0$ gegeben.
-Wenn $X_n\geq\varepsilon$, dann gilt, weil $X_n$ nach $\{0,\sqrt{n}\}$ abbildet, $X_n=\sqrt{n}$.
+Weil $X_n$ nach $\{0,\sqrt{n}\}$ abbildet gilt $X=\sqrt{n}$ Wenn $X_n\geq\varepsilon$.
 Somit ist der Limes gegeben durch $\lim P(X_n\geq\varepsilon)=P(X_n=\sqrt{n})=\lim\frac{1}{n}=0$.
 $(X_n)$ konvergiert also stochastisch gegen $X=0$.
 
