--- a/homeworks/04/sol/04.tex
+++ b/homeworks/04/sol/04.tex
@@ -23,13 +23,55 @@
 
 \begin{document}
 
-\paragraph{B4A1}
+\paragraph{Satz 6}
+\paragraph{Satz 8}
+\paragraph{B4A1.1}
+Haben $X_1(\omega)=\omega$ und $X_2(\omega)=1-\omega$ die gleiche Verteilung auf $([0,1],{\cal B}([0,1]),\lambda|_{[0,1]})$?
+\paragraph{B4A1.2}
+Gibt es ein Wahrscheinlichkeitsmaß $P$ auf $([0,1],{\cal B}([0,1]))$, sodass $X_1(\omega)=\omega$ und $X_2(\omega)=1-\omega$ nicht die gleiche Verteilung haben?
+\paragraph{B4A1.3}
+Wenn $X\sim{\cal N}(2,2)$ verteilt ist, gilt $P[|X-2|\geq2]\leq\frac{1}{2}$.
+\paragraph{B4A1.4}
+Jedes $X\colon \Omega\to\mathbb{R}$ messbar hat eine Dichte bezüglich $\lambda$.
+\paragraph{B4A1.5}
+Auf $(\Omega,{\cal P}(\Omega))$ sind alle Abbildungen $(\Omega,{\cal P}(\Omega))\to(\mathbb{R},{\cal B}(\mathbb{R}))$ messbar.
+\paragraph{B4A1.6}
+Für $X\sim{\cal N}(0,1)$ und $Y\sim{\cal N}(0,2)$ gilt $E[XY]\leq\sqrt{2}$.
+\paragraph{B4A1.7}
+$\mathbb{N}$-wertige Zufallsvariable $X$ zu sich selbst unabhängig gilt genau dann, wenn $X$ fast sicher konstant ist.
+\paragraph{B4A1.8}
+Es gilt $E[\mathbbm{1}_A\mathbbm{1}_B]=E[\mathbbm{1}_A]E[\mathbbm{1}_B]$ genau dann, wenn $A$ und $B$ unabhängig sind.
+\paragraph{B4A1.9}
+Für $X$ exponentialverteilt mit $\lambda=1$ gilt $E[X^4]\geq E[X]^4$.
+\paragraph{B4A1.10}
+Gilt $\mu(A)=0$ genau dann, wenn $\nu(A)=0$, dann gibt es ein messbares $f$, sodass $\mu(A)=\int_A f(\omega)\nu(\mathrm{d}\omega)$.
+\paragraph{B4A1.11}
+Auf $(\omega,\{\Omega,\emptyset\})$ gibt es keine Borel-messbare Abbildung.
+\paragraph{B4A1.12}
+Seien $X\sim\operatorname{Exp}(6)$ und $Y\sim\operatorname{Exp}\bigl(\frac{1}{3}\bigr)$, dann gilt $E[XY]\leq1$, wobei für $Z\sim\operatorname{Exp}(\lambda)$ gilt $E[Z]=\frac{1}{\lambda}$ und $E[Z^2]=\frac{2}{\lambda^2}$.
+\paragraph{B4A1.13}
+Ist $q\leq p$ und $X\in L^p(\Omega,{\cal F},P)$, so ist $X\in L^q(\Omega,{\cal F},P)$.
 \newpage
 
 \paragraph{B4A2}
+Seien $(X_n)$ Zufallsvariablen sodass $X_1=0$ und $X_n=\sqrt{n}\mathbbm{1}_{(\frac{1}{n},\frac{2}{n})}$ auf $([0,1],{\cal B}([0,1]),\lambda|_{[0,1]})$.
+\subparagraph{B4A2.1} $(X_n)$ konvergiert in Wahrscheinlichkeit.
+
+\subparagraph{B4A2.2} $(X_n)$ konvergiert fast sicher.
+
+\subparagraph{B4A2.3} $(X_n)$ konvergiert in $L_2$.
+
+\subparagraph{B4A2.4} $(X_n)$ ist gleichgradig integrierbar.
 \newpage
 
-\paragraph{B4A3}
+\paragraph{B4A3} Seien $(X_n)$ Zufallsvariablen, sodass $X_n(\omega)=\omega^{\frac{1}{n}}$ auf $([0,1],{\cal B}([0,1]),P)$, wobei $P\ll\lambda|_{[0,1]}$ mit Dichte $f(\omega)=\frac{1}{2}\omega^{-\frac{1}{2}}$.
+\subparagraph{B4A2.1} $(X_n)$ konvergiert in Wahrscheinlichkeit.
+
+\subparagraph{B4A2.2} $(X_n)$ konvergiert fast sicher.
+
+\subparagraph{B4A2.3} $(X_n)$ konvergiert in $L_1$.
+
+\subparagraph{B4A2.4} $(X_n)$ ist gleichgradig integrierbar.
 \newpage
 
 \bibliography{../../../books/wt}
