Started first exercise

--- a/homeworks/04/sol/04.tex
+++ b/homeworks/04/sol/04.tex
@@ -46,6 +46,7 @@ Dann gilt folgendes.
 
 \paragraph{B4A1.1}
 Haben $X_1(\omega)=\omega$ und $X_2(\omega)=1-\omega$ die gleiche Verteilung auf $([0,1],{\cal B}([0,1]),\lambda|_{[0,1]})$?
+So sehen die $X_1$ und $X_2$ auf $[0,1]$ aus
 \paragraph{B4A1.2}
 Gibt es ein Wahrscheinlichkeitsmaß $P$ auf $([0,1],{\cal B}([0,1]))$, sodass $X_1(\omega)=\omega$ und $X_2(\omega)=1-\omega$ nicht die gleiche Verteilung haben?
 \paragraph{B4A1.3}
